--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,30 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.container
+    div.card
+      div.card-header
+        div.backdrop
+        div.card-title Pizza Hut
+        img.card-header-image(src='https://www.fastfoodpost.com/wp-content/uploads/2021/08/The-Big-Dinner-Box-Is-Back-At-Pizza-Hut.jpg')
+      div.card-body
+        div.edit
+          a(href='#') Edit
+        div.card-details
+          div.category Italian
+          div.rating
+            span &#X2b50;
+            span &#X2b50;
+            span &#X2b50;
+            span &#X2b50;
+            span &#X2b50;
+        div.description
+
+           |safydukmzkxnbmdskv
+           |safydukmzkxlfgs,kmwm.lz,a;sz\
+           |safydukmzkxlfgs,kmwm.lz,a;sz
+           |safydukmzkxlfgs,kmwm.lz,a;sz
+           |safydukmzkxlfgs,kmwm.lz,a;sz
+           |safydukmzkxlfgs,kmwm.lz,a;sz
+           |safydukmzkxlfgs,kmwm.lz,a;sz
+           |safydukmzkxlfgs,kmwm.lz,a;sz
