--- a/views/index.pug
+++ b/views/index.pug
@@ -1,30 +1,9 @@
 extends layout
 
 block content
-  div.container
-    div.card
-      div.card-header
-        div.backdrop
-        div.card-title Pizza Hut
-        img.card-header-image(src='https://www.fastfoodpost.com/wp-content/uploads/2021/08/The-Big-Dinner-Box-Is-Back-At-Pizza-Hut.jpg')
-      div.card-body
-        div.edit
-          a(href='#') Edit
-        div.card-details
-          div.category Italian
-          div.rating
-            span &#X2b50;
-            span &#X2b50;
-            span &#X2b50;
-            span &#X2b50;
-            span &#X2b50;
-        div.description
-
-           |safydukmzkxnbmdskv
-           |safydukmzkxlfgs,kmwm.lz,a;sz\
-           |safydukmzkxlfgs,kmwm.lz,a;sz
-           |safydukmzkxlfgs,kmwm.lz,a;sz
-           |safydukmzkxlfgs,kmwm.lz,a;sz
-           |safydukmzkxlfgs,kmwm.lz,a;sz
-           |safydukmzkxlfgs,kmwm.lz,a;sz
-           |safydukmzkxlfgs,kmwm.lz,a;sz
+    include mixins/restaurantCard
+    div.container
+        div.add-button-row
+            a.button.save(href="/add") Add Restaurant
+        each restaurant in restaurants
+          +restaurantCard(restaurant)
