--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    header.main-header
+      img.mainpicture(src='https://htmlcolorcodes.com/assets/images/colors/dark-blue-color-solid-background-1920x1080.png')
     block content
