--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header.main-header
-      img.mainpicture(src='https://htmlcolorcodes.com/assets/images/colors/dark-blue-color-solid-background-1920x1080.png')
+      img.mainpicture(src='https://cdn2.vectorstock.com/i/1000x1000/60/46/fast-food-logo-emblems-labels-and-badges-vector-8886046.jpg')
     block content
